[gd_scene load_steps=4 format=3 uid="uid://dqhhr2un2aypm"]

[ext_resource type="Texture2D" uid="uid://c75ecbngqhrrj" path="res://icon.svg" id="1_5f0py"]
[ext_resource type="Script" path="res://main.gd" id="1_j2ato"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_afrq1"]

[node name="main" type="Node2D"]
script = ExtResource("1_j2ato")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
custom_minimum_size = Vector2(0, 180)
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_afrq1")

[node name="GodotImages" type="HBoxContainer" parent="CanvasLayer/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -262.0
offset_right = 262.0
offset_bottom = 128.0
grow_horizontal = 2
size_flags_horizontal = 4

[node name="Image1" type="TextureRect" parent="CanvasLayer/Panel/GodotImages" groups=["group_1"]]
layout_mode = 2
texture = ExtResource("1_5f0py")

[node name="Image2" type="TextureRect" parent="CanvasLayer/Panel/GodotImages" groups=["group_1"]]
layout_mode = 2
texture = ExtResource("1_5f0py")

[node name="Image3" type="TextureRect" parent="CanvasLayer/Panel/GodotImages" groups=["group_2"]]
layout_mode = 2
texture = ExtResource("1_5f0py")

[node name="Image4" type="TextureRect" parent="CanvasLayer/Panel/GodotImages" groups=["group_2"]]
layout_mode = 2
texture = ExtResource("1_5f0py")

[node name="GodotImagesOptions" type="HBoxContainer" parent="CanvasLayer/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -31.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="OptionButton" type="OptionButton" parent="CanvasLayer/Panel/GodotImagesOptions"]
layout_mode = 2
item_count = 3
popup/item_0/text = "No Group"
popup/item_0/id = 0
popup/item_1/text = "Group 1"
popup/item_1/id = 1
popup/item_2/text = "Group 2"
popup/item_2/id = 2

[node name="OptionButton2" type="OptionButton" parent="CanvasLayer/Panel/GodotImagesOptions"]
layout_mode = 2
item_count = 3
popup/item_0/text = "No Group"
popup/item_0/id = 0
popup/item_1/text = "Group 1"
popup/item_1/id = 1
popup/item_2/text = "Group 2"
popup/item_2/id = 2

[node name="OptionButton3" type="OptionButton" parent="CanvasLayer/Panel/GodotImagesOptions"]
layout_mode = 2
item_count = 3
popup/item_0/text = "No Group"
popup/item_0/id = 0
popup/item_1/text = "Group 1"
popup/item_1/id = 1
popup/item_2/text = "Group 2"
popup/item_2/id = 2

[node name="OptionButton4" type="OptionButton" parent="CanvasLayer/Panel/GodotImagesOptions"]
layout_mode = 2
item_count = 3
popup/item_0/text = "No Group"
popup/item_0/id = 0
popup/item_1/text = "Group 1"
popup/item_1/id = 1
popup/item_2/text = "Group 2"
popup/item_2/id = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -15.5
offset_right = 75.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="Button" type="Button" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
text = "Change Group 1 colors 
to Red"

[node name="Button2" type="Button" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
text = "Change Group 2 colors
to Blue"

[node name="Button3" type="Button" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
text = "Reset"
